# MedQCNN

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  research.md
.github/workflows/: ci.yml  docker-compose-verify.yml  docker.yml
_agents/workflows/: run.md
docs/: api_reference.md  architecture.md  benchmarks.md  deployment.md  keepsave_integration.md  quantum_primer.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/app/benchmarks/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/history/[id]/: page.tsx
frontend/src/app/model/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/components/: BenchmarkCharts.tsx  DiagnosisResult.tsx  ImageUploader.tsx  Navbar.tsx  QuantumBar.tsx  Skeleton.tsx  ThemeToggle.tsx  TrainingCharts.tsx
frontend/src/lib/: api.ts
medqcnn/: __init__.py  __main__.py
medqcnn/agent/: __init__.py  agent.py  tools.py
medqcnn/api/: __init__.py  auth.py  kafka_handler.py  model_service.py  monitoring.py  rate_limit.py  schemas.py  security.py  server.py
medqcnn/classical/: __init__.py  backbone.py  projector.py
medqcnn/config/: __init__.py  constants.py
medqcnn/data/: __init__.py  dicom.py  loader.py  opencv_ops.py  preprocessing.py
medqcnn/db/: __init__.py  connection.py  crud.py  models.py
medqcnn/mcp/: server.py
medqcnn/model/: __init__.py  hybrid.py  registry.py
medqcnn/quantum/: __init__.py  ansatz.py  encoding.py  observables.py  qnode.py
medqcnn/training/: __init__.py  loss.py  metrics.py  trainer.py  visualization.py
medqcnn/utils/: device.py  logging.py
notebooks/: 00_fundamentals_to_advanced.ipynb  01_medqcnn_explained.ipynb  02_caasq_agent_usecase.ipynb
scripts/: camera.py  demo.py  evaluate.py  mcp_server.py  serve.py  train.py  verify-docker.sh
settings/: settings.json
tests/: __init__.py  test_api_integration.py  test_auth.py  test_classical.py  test_data.py  test_database.py  test_model.py  test_model_registry.py  test_monitoring.py  test_quantum.py  test_rate_limit.py  test_security.py
